--- a/templates/base.html
+++ b/templates/base.html
@@ -17,77 +17,46 @@
     <title>{% block title %} BASE {% endblock title %}</title>
   </head>
   <body>
-    <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-          <img
-            src="{% static 'images/logo.svg' %}"
-            alt=""
-            width="60"
-            height="50"
-            class="d-inline-block align-middle"
-          />
-          VR Commission
-        </a>
+    <!-- HEADER -->
+    <nav class="navbar navbar-expand-md navbar-dark custom-bg">
+      <div
+        class="navbar-collapse w-100 order-1 order-md-0 dual-collapse2 collapse"
+        style=""
+      >
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <img
+              class="logo"
+              src="{% static 'images/logo.svg' %}"
+              height="40"
+            />
+            Voters' Registration Commission
+          </li>
+        </ul>
+      </div>
+
+      <div class="mx-auto order-0">
+        <a class="navbar-brand mx-auto" href="#" style="margin-left: -30%"
+          >VOTERS' REGISTRATION PLATFORM</a
+        >
         <button
-          class="navbar-toggler"
+          class="navbar-toggler collapsed"
           type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
+          data-toggle="collapse"
+          data-target=".dual-collapse2"
           aria-expanded="false"
-          aria-label="Toggle navigation"
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                id="navbarDropdown"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Dropdown
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><hr class="dropdown-divider" /></li>
-                <li>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled">Disabled</a>
-            </li>
-          </ul>
-          <form class="d-flex">
-            <input
-              class="form-control me-2"
-              type="search"
-              placeholder="Search"
-              aria-label="Search"
-            />
-            <button class="btn btn-outline-success" type="submit">
-              Search
-            </button>
-          </form>
-        </div>
+      </div>
+      <div
+        class="navbar-collapse w-100 order-3 dual-collapse2 collapse"
+        style=""
+      >
+        <ul class="navbar-nav ml-auto"></ul>
       </div>
     </nav>
-    <!-- END OF NAVBAR -->
+    <!-- END OF HEADER -->
     <!-- BOOSTRAP JS -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
