--- a/templates/base.html
+++ b/templates/base.html
@@ -68,7 +68,10 @@
               placeholder="Search"
               aria-label="Search"
             />
-            <button class="btn btn-outline-success" type="submit">
+            <button
+              class="btn btn-outline-success custom-search-btn"
+              type="submit"
+            >
               Search
             </button>
           </form>
