Add login.html setup

--- a/templates/base.html
+++ b/templates/base.html
@@ -88,7 +88,8 @@
     <div class="nav-title">
       <h3 class="title">voters' registration platform</h3>
     </div>
-    <!-- END OF HEADER -->
+    <!-- END OF NAVBAR -->
+    {% block content %} {% endblock content %}
     <!-- BOOSTRAP JS -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
