--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -70,10 +70,10 @@ a {
   text-decoration: none;
 }
 
-img:not(.nav-logo) {
+/* img:not(.hero-img) {
   width: 100%;
   display: block;
-}
+} */
 
 h1,
 h2,
@@ -112,7 +112,7 @@ h4 {
 
 .btn {
   text-transform: uppercase;
-  background: var(--clr-primary-5);
+  background: var(--clr-primary-dark);
   color: var(--clr-white);
   padding: 0.375rem 0.75rem;
   letter-spacing: var(--spacing);
@@ -128,7 +128,21 @@ h4 {
   color: var(--clr-primary-1);
   background: var(--clr-primary-8);
 }
-
+.section {
+  padding: 5rem 0;
+}
+.section-center {
+  width: 90vw;
+  margin: 0 auto;
+  max-width: 1170px;
+}
+@media screen and (min-width: 992px) {
+  .section-center {
+    width: 95vw;
+    display: flex;
+    justify-content: space-evenly;
+  }
+}
 .custom-bg {
   background: var(--clr-primary-dark);
   color: var(--clr-white);
@@ -158,4 +172,42 @@ h4 {
 .custom-search-btn:hover {
   background: var(--clr-white);
   color: var(--clr-primary-dark);
+}
+.hero-img {
+  background: transparent;
+  width: 250px;
+  height: 250px;
+  object-fit: cover;
+}
+.hero-container {
+  margin: 1rem;
+}
+
+/* footer */
+.footer {
+  background: var(--clr-primary-dark);
+  text-align: center;
+}
+.footer-icons {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 1.5rem;
+  flex-wrap: wrap;
+}
+
+.footer-icon {
+  font-size: 2rem;
+  margin-right: 1rem;
+  color: var(--clr-primary-8);
+  transition: var(--transition);
+}
+
+.footer-icon:hover {
+  color: var(--clr-primary-5);
+}
+
+.copyright {
+  text-transform: capitalize;
+  letter-spacing: var(--spacing);
+  color: var(--clr-white);
 }
