--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,11 @@
       type="image/png"
       href="{% static 'favicon.ico' %}"
     />
+    <!-- FONT AWESOME -->
+    <link
+      rel="stylesheet"
+      href="path/to/font-awesome/css/font-awesome.min.css"
+    />
     <!-- BOOSTRAP CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -90,29 +95,7 @@
     </div>
     <!-- END OF NAVBAR -->
     {% block content %} {% endblock content %}
-    <footer class="section footer">
-      <ul class="footer-icons">
-        <li>
-          <a href="https://www.facebook.com" class="footer-icon" target="_blank"
-            ><i class="fab fa-facebook"></i
-          ></a>
-        </li>
-        <li>
-          <a href="https://www.twitter.com" class="footer-icon" target="_blank"
-            ><i class="fab fa-twitter"></i
-          ></a>
-        </li>
-        <li>
-          <a href="https://www.linkedin.com" class="footer-icon" target="_blank"
-            ><i class="fab fa-linkedin"></i
-          ></a>
-        </li>
-      </ul>
-      <p class="copyright">
-        copyright &copy; voters' registration commission
-        <span id="date"></span> all rigths reserved
-      </p>
-    </footer>
+
     <!-- BOOSTRAP JS -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
