--- a/templates/login.html
+++ b/templates/login.html
@@ -10,6 +10,7 @@
           alt=""
           class="hero-img"
         />
+        <hr />
         <p class="hero-text">start your application today</p>
         <button class="btn hero-btn">new apllication</button>
       </article>
@@ -19,6 +20,7 @@
     <div>
       <article class="hero-container">
         <img src="{% static 'images/login.jpeg' %}" alt="" class="hero-img" />
+        <hr />
         <p class="hero-text">login with your credentials</p>
         <button class="btn hero-btn">login</button>
       </article>
@@ -28,7 +30,8 @@
     <div>
       <article class="hero-container">
         <img src="{% static 'images/status.jpeg' %}" alt="" class="hero-img" />
-        <p class="hero-text">check your status to confirm eligibility</p>
+        <hr />
+        <p class="hero-text">check status, confirm eligibility</p>
         <button class="btn hero-btn">check status</button>
       </article>
     </div>
@@ -37,7 +40,8 @@
     <div>
       <article class="hero-container">
         <img src="{% static 'images/pin.jpeg' %}" alt="" class="hero-img" />
-        <p class="hero-text">get your voter's number</p>
+        <hr />
+        <p class="hero-text">get your secret voter's number</p>
         <button class="btn hero-btn">voter's number</button>
       </article>
     </div>
