--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,5 @@
-{% extends "base.html" %} {% load static %}
-{% block title %} LOGIN {% endblock title %} {% block content %}
+{% extends "base.html" %} {% load static %} {% block title %} LOGIN {% endblock
+title %} {% block content %}
 <section class="section">
   <div class="section-center">
     <!-- first content -->
