--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
     <!-- FONT AWESOME -->
     <link
       rel="stylesheet"
-      href="path/to/font-awesome/css/font-awesome.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
     />
     <!-- BOOSTRAP CSS -->
     <link
@@ -95,12 +95,35 @@
     </div>
     <!-- END OF NAVBAR -->
     {% block content %} {% endblock content %}
-
+    <!-- FOOTER -->
+    <div class="dd"></div>
+    <footer class="footer">
+      <ul class="social-icons">
+        <li>
+          <a href="" class="social-icon"><i class="fab fa-facebook"></i></a>
+        </li>
+        <li>
+          <a href="" class="social-icon"><i class="fab fa-twitter"></i></a>
+        </li>
+        <li>
+          <a href="" class="social-icon"><i class="fab fa-instagram"></i></a>
+        </li>
+        <li>
+          <a href="" class="social-icon"><i class="fab fa-linkedin"></i></a>
+        </li>
+      </ul>
+      <p class="copyright">
+        copyright &copy; mole tours Co. Ltd. <span id="date"></span> all rigths
+        reserved
+      </p>
+    </footer>
     <!-- BOOSTRAP JS -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
+    <!-- CUSTOM JS -->
+    <script src="{% static 'js/app.js' %}"></script>
   </body>
 </html>
