--- a/templates/base.html
+++ b/templates/base.html
@@ -98,7 +98,7 @@
     <!-- FOOTER -->
     <div class="dd"></div>
     <footer class="footer">
-      <ul class="social-icons">
+      <ul class="social-icons flex">
         <li>
           <a href="" class="social-icon"><i class="fab fa-facebook"></i></a>
         </li>
@@ -113,8 +113,8 @@
         </li>
       </ul>
       <p class="copyright">
-        copyright &copy; mole tours Co. Ltd. <span id="date"></span> all rigths
-        reserved
+        copyright &copy; Voters' Registration Commission
+        <span id="date"></span> all rigths reserved
       </p>
     </footer>
     <!-- BOOSTRAP JS -->
