--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %} {% load static %}
 {% block title %} LOGIN {% endblock title %} {% block content %}
 <section class="section">
-  <div class="section-center">
+  <div class="section-center flex">
     <!-- first content -->
     <div>
       <article class="hero-container">
