--- a/templates/hero.html
+++ b/templates/hero.html
@@ -12,7 +12,7 @@
         />
         <hr />
         <p class="hero-text">register with your ghana card</p>
-        <a href="{% url 'login' %}"><button class="btn hero-btn">register</button><a/>
+        <a href="{% url 'signup' %}"><button class="btn hero-btn">register</button><a/>
       </article>
     </div>
     <!-- end of first content -->
@@ -33,7 +33,7 @@
         <img src="{% static 'images/status.jpeg' %}" alt="" class="hero-img" />
         <hr />
         <p class="hero-text">check / confirm eligibility...</p>
-        <a href="{% url 'login' %}"><button class="btn hero-btn">check status</button><a/>
+        <a href="{% url 'logout' %}"><button class="btn hero-btn">check status</button><a/>
 
       </article>
     </div>
