Add database migrations

--- a/templates/hero.html
+++ b/templates/hero.html
@@ -50,5 +50,6 @@
     <!-- end of fourth content -->
   </div>
 </section>
+<h5>i am a <span class="job-title">sofware engineer</span></h5>
 
 {% endblock content %}
