--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -1,7 +1,9 @@
-{% extends "base.html" %} {% load static %} {% block content %}
+{% extends "base.html" %} {% load static %}
+{% load crispy_forms_tags %}
+{% block content %}
 <h2>Sign Up</h2>
 <form method="post">
-  {% csrf_token %} {{ form.as_p }}
+  {% csrf_token %} {{ form|crispy}}
   <button type="submit">Sign Up</button>
 </form>
 {% endblock content %}
