--- a/templates/base.html
+++ b/templates/base.html
@@ -60,8 +60,14 @@
                 Dropdown
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">New Application</a></li>
-                <li><a class="dropdown-item" href="#">Login</a></li>
+                <li>
+                  <a class="dropdown-item" href="{% url 'signup' %}"
+                    >Register</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="{% url 'login' %}">Login</a>
+                </li>
                 <li><hr class="dropdown-divider" /></li>
                 <li>
                   <a class="dropdown-item" href="#">Check Status</a>
@@ -96,7 +102,7 @@
     <!-- END OF NAVBAR -->
     {% block content %} {% endblock content %}
     <!-- FOOTER -->
-    <div class="dd"></div>
+
     <footer class="footer">
       <ul class="social-icons flex">
         <li>
