--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %} {% block content %}
 <h2>Log In</h2>
-<form method="post">
+<form method="post" class="login-form">
   {% csrf_token %} {{ form.as_p }}
-  <button type="submit">Log In</button>
+  <button type="submit" class="btn">Log In</button>
 </form>
+<a href="#" class="forgot-passwd">Forgot password?</a>
 {% endblock content %}
