--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -1,9 +1,13 @@
-{% extends "base.html" %} {% load static %}
-{% load crispy_forms_tags %}
-{% block content %}
-<h2>Sign Up</h2>
+{% extends "base.html" %} {% load static %} {% load crispy_forms_tags %} {%
+block title %} SIGNUP {% endblock title %}i {% block content %}
+<h3>Sign Up</h3>
 <form method="post">
   {% csrf_token %} {{ form|crispy}}
-  <button type="submit">Sign Up</button>
+  <button type="submit" class="btn">Sign Up</button>
 </form>
+<span
+  >Already have an account?<a href="{% url 'login' %}" class="login"
+    >Login</a
+  ></span
+>
 {% endblock content %}
