--- a/templates/base.html
+++ b/templates/base.html
@@ -70,7 +70,9 @@
                 </li>
                 <li><hr class="dropdown-divider" /></li>
                 <li>
-                  <a class="dropdown-item" href="#">Check Status</a>
+                  <a class="dropdown-item" href="{% url 'password_change' %}"
+                    >Check Status</a
+                  >
                 </li>
                 <li>
                   <a class="dropdown-item" href="#">Get Serial No. And Pin</a>
