Add styles for register.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -30,77 +30,79 @@
   </head>
   <body>
     <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-lg navbar-dark custom-bg">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#"
-          ><img class="nav-logo" src="{% static 'images/logo.svg' %}" alt=""
-        /></a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle active"
-                href="#"
-                id="navbarDropdown"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Dropdown
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li>
-                  <a class="dropdown-item" href="{% url 'signup' %}"
-                    >Register</a
-                  >
-                </li>
-                <li>
-                  <a class="dropdown-item" href="{% url 'login' %}">Login</a>
-                </li>
-                <li><hr class="dropdown-divider" /></li>
-                <li>
-                  <a class="dropdown-item" href="{% url 'password_change' %}"
-                    >Check Status</a
-                  >
-                </li>
-                <li>
-                  <a class="dropdown-item" href="#">Get Serial No. And Pin</a>
-                </li>
-              </ul>
-            </li>
-          </ul>
+    <section id="nav">
+      <nav class="navbar navbar-expand-lg navbar-dark custom-bg" id="nav">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#"
+            ><img class="nav-logo" src="{% static 'images/logo.svg' %}" alt=""
+          /></a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle active"
+                  href="#"
+                  id="navbarDropdown"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Dropdown
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li>
+                    <a class="dropdown-item" href="{% url 'signup' %}"
+                      >Register</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="{% url 'login' %}">Login</a>
+                  </li>
+                  <li><hr class="dropdown-divider" /></li>
+                  <li>
+                    <a class="dropdown-item" href="{% url 'password_change' %}"
+                      >Check Status</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#">Get Serial No. And Pin</a>
+                  </li>
+                </ul>
+              </li>
+            </ul>
 
-          <form class="d-flex">
-            <input
-              class="form-control me-2"
-              type="search"
-              placeholder="Search"
-              aria-label="Search"
-            />
-            <button
-              class="btn btn-outline-success custom-search-btn"
-              type="submit"
-            >
-              Search
-            </button>
-          </form>
+            <form class="d-flex">
+              <input
+                class="form-control me-2"
+                type="search"
+                placeholder="Search"
+                aria-label="Search"
+              />
+              <button
+                class="btn btn-outline-success custom-search-btn"
+                type="submit"
+              >
+                Search
+              </button>
+            </form>
+          </div>
         </div>
+      </nav>
+      <div class="nav-title">
+        <h3 class="title">voters' registration platform</h3>
       </div>
-    </nav>
-    <div class="nav-title">
-      <h3 class="title">voters' registration platform</h3>
-    </div>
+    </section>
     <!-- END OF NAVBAR -->
     {% block content %} {% endblock content %}
     <!-- FOOTER -->
