--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -42,6 +42,12 @@ Variables
   --radius: 0.5rem;
   --light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
   --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+  --clr-grey-5: hsl(210, 22%, 49%);
+  --clr-grey-6: hsl(209, 23%, 60%);
+  --clr-grey-7: hsl(211, 27%, 70%);
+  --clr-grey-8: hsl(210, 31%, 80%);
+  --clr-grey-9: hsl(212, 33%, 89%);
+  --clr-grey-10: hsl(210, 36%, 96%);
 }
 /*
 =============== 
@@ -58,8 +64,8 @@ Global Styles
 }
 body {
   font-family: var(--ff-primary);
-  background: var(--clr-white);
-  color: var(--clr-grey-1);
+  background: var(--clr-grey-1);
+
   line-height: 1.5;
   font-size: 0.875rem;
 }
@@ -268,4 +274,91 @@ hr {
 }
 .tf {
   margin-bottom: 34rem;
+}
+
+.small-nav-section {
+  color: var(--clr-grey-5);
+  display: none;
+}
+
+.mn {
+  background: var(--clr-grey-10);
+  text-transform: capitalize;
+  /* display: inline-block; */
+  margin-bottom: 0;
+  padding: 1rem;
+}
+.small-nav-items {
+  padding: 0.7rem;
+  margin-left: 0.8rem;
+}
+.small-nav-text {
+  position: relative;
+  text-transform: capitalize;
+  /* margin: 5rem 0; */
+  margin-top: 0;
+  margin-left: 0.3rem;
+}
+.small-nav-text::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -15px;
+  width: 15rem;
+  height: 1px;
+  background: var(--clr-grey-5);
+}
+.small-nav-icon {
+  padding-right: 0.5rem;
+}
+.main-dash {
+  text-align: center;
+  width: 95vw;
+  max-width: 300px;
+  margin: 0 auto;
+}
+.main-dash-icon {
+  display: block;
+  font-size: 5rem;
+  transition: var(--transition);
+}
+
+.main-dash-items {
+  border: 1px solid var(--clr-grey-9);
+  margin: 2rem;
+}
+.main-dash-items:hover .main-dash-icon {
+  transform: scale(1.1);
+}
+.main-dash-text {
+  text-transform: capitalize;
+  margin-bottom: 1rem;
+  color: var(--clr-grey-5);
+  display: inline-block;
+  /* padding-bottom: 1rem; */
+}
+#nav {
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  z-index: 2;
+}
+@media screen and (min-width: 720px) {
+  .small-nav-section {
+    display: block;
+    margin-top: 2rem;
+  }
+  .navigation {
+    display: flex;
+  }
+  .main-items {
+    margin-top: 3rem;
+    display: flex;
+    flex-wrap: wrap;
+
+    justify-content: space-evenly;
+  }
+  .main-dash {
+  }
 }
