Add register.html styles

--- a/templates/register.html
+++ b/templates/register.html
@@ -74,6 +74,12 @@
         <span class="main-dash-text">indentification</span>
       </div>
       <!-- end of second item -->
+      <!-- second item -->
+      <div class="main-dash-items">
+        <a href="#" class="main-dash-icon"><i class="fa fa-id-card"></i></a>
+        <span class="main-dash-text">indentification</span>
+      </div>
+      <!-- end of second item -->
     </div>
   </div>
 </section>
