--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -314,7 +314,7 @@ hr {
 .main-dash {
   text-align: center;
   width: 95vw;
-  max-width: 300px;
+  /* max-width: 700px; */
   margin: 0 auto;
 }
 .main-dash-icon {
@@ -347,18 +347,33 @@ hr {
 @media screen and (min-width: 720px) {
   .small-nav-section {
     display: block;
-    margin-top: 2rem;
+    margin-top: 5rem;
   }
   .navigation {
     display: flex;
-  }
-  .main-items {
-    margin-top: 3rem;
-    display: flex;
-    flex-wrap: wrap;
-
     justify-content: space-evenly;
   }
+  .main-items {
+    /* margin-top: 3rem; */
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 90vw;
+    max-width: 1170px;
+  }
   .main-dash {
+    margin-top: 5rem;
+  }
+  .main-dash-items {
+    padding: 1rem 4rem;
+    margin-left: 5rem;
+    margin-top: 5rem;
+  }
+  .main-dash-text {
+    max-width: 5rem;
+    text-align: center;
+  }
+  .main-dash-icon {
+    font-size: 7rem;
   }
 }
