Add register.html css

--- a/templates/register.html
+++ b/templates/register.html
@@ -9,21 +9,21 @@
         <!-- first item -->
         <div class="small-nav-items">
           <a href="#" class="small-nav-icon"><i class="fa fa-user"></i></a>
-          <span class="small-nav-text">bio information</span>
+          <span class="small-nav-text">bio</span>
         </div>
         <!-- end of first item -->
 
         <!-- second item -->
         <div class="small-nav-items">
           <a href="#" class="small-nav-icon"><i class="fa fa-id-card"></i></a>
-          <span class="small-nav-text">indentification</span>
+          <span class="small-nav-text">identity</span>
         </div>
         <!-- end of second item -->
 
         <!-- third item -->
         <div class="small-nav-items">
           <a href="#" class="small-nav-icon"><i class="fa fa-home"></i></a>
-          <span class="small-nav-text">resdential address</span>
+          <span class="small-nav-text">residence</span>
         </div>
         <!-- end of third item -->
 
@@ -32,7 +32,39 @@
           <a href="#" class="small-nav-icon"
             ><i class="fa fa-mortar-board"></i
           ></a>
-          <span class="small-nav-text">educational background</span>
+          <span class="small-nav-text">education</span>
+        </div>
+        <!-- end of fourth item -->
+        <!-- fourth item -->
+        <div class="small-nav-items">
+          <a href="#" class="small-nav-icon"
+            ><i class="fa fa-mortar-board"></i
+          ></a>
+          <span class="small-nav-text">language</span>
+        </div>
+        <!-- end of fourth item -->
+        <!-- fourth item -->
+        <div class="small-nav-items">
+          <a href="#" class="small-nav-icon"
+            ><i class="fa fa-mortar-board"></i
+          ></a>
+          <span class="small-nav-text">voting</span>
+        </div>
+        <!-- end of fourth item -->
+        <!-- fourth item -->
+        <div class="small-nav-items">
+          <a href="#" class="small-nav-icon"
+            ><i class="fa fa-mortar-board"></i
+          ></a>
+          <span class="small-nav-text">declaration</span>
+        </div>
+        <!-- end of fourth item -->
+        <!-- fourth item -->
+        <div class="small-nav-items">
+          <a href="#" class="small-nav-icon"
+            ><i class="fa fa-mortar-board"></i
+          ></a>
+          <span class="small-nav-text">declaration</span>
         </div>
         <!-- end of fourth item -->
       </article>
