--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -304,7 +304,7 @@ hr {
   position: absolute;
   left: 0;
   bottom: -15px;
-  width: 15rem;
+  width: 8rem;
   height: 1px;
   background: var(--clr-grey-5);
 }
@@ -348,7 +348,27 @@ hr {
   .small-nav-section {
     display: block;
     margin-top: 5rem;
+    height: 50vh;
+    width: 15rem;
   }
+  .mn {
+    width: 100vw;
+  }
+  .navigation::after {
+    content: "";
+    position: absolute;
+    height: 83.5%;
+    width: 2px;
+    background: var(--clr-grey-9);
+    left: 11.8%;
+    top: 3%;
+    /* bottom: 10%; */
+    /* z-index: 10; */
+  }
+  .small-nav-items {
+    padding: 2rem;
+  }
+
   .navigation {
     display: flex;
     justify-content: space-evenly;
